--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,7 +25,7 @@ repos:
       - id: pyright
         name: pyright
         description: "Run 'pyright' for Python type checking"
-        entry: uv run pyright fntypes --level error
+        entry: uv run pyright kungfu --level error
         pass_filenames: false
         language: system
         types: [ python ]
