--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,20 @@
 [project]
 name = "kungfu"
-version = "0.2.1"
+version = "0.3.0"
 description = ""
 authors = [{ name = "timoniq" }]
 requires-python = ">=3.13,<4.0"
 readme = "readme.md"
-dependencies = ["typing-extensions>=4.13.2,<5"]
+dependencies = ["typing-extensions>=4.15.0"]
 
 [dependency-groups]
 dev = [
-    "pytest>=8.3.5,<9",
-    "pytest-asyncio>=1.0.0,<2",
-    "ruff>=0.12.8,<1.0.0",
-    "pyright[nodejs]>=1.1.403,<2",
-    "pre-commit>=4.3.0,<5.0.0"
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
+    "ruff>=0.14.13",
+    "pyright[nodejs]>=1.1.408",
+    "pre-commit>=4.5.1"
 ]
 
 [build-system]
